--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
             "es2020"
         ],
         "outDir": "./dist",
-        "rootDir": "./src",
+        // "rootDir": "./src",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
@@ -15,11 +15,15 @@
         "paths": {
             "@/*": [
                 "src/*"
+            ],
+            "@common/*": [
+                "../common/*"
             ]
         }
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "../common/**/*"
     ],
     "exclude": [
         "node_modules",
